--- a/apps/frontend/templates/html5boilerplate.html
+++ b/apps/frontend/templates/html5boilerplate.html
@@ -1,22 +1,21 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-    <meta charset="utf-8">
-    <?php include_http_metas() ?>
-    <?php include_metas() ?>
-    <?php include_title() ?>
-    <?php include_stylesheets() ?>
-    <?php include_javascripts() ?>
-    <link rel="shortcut icon" href="/favicon.ico" />
+  <meta charset="utf-8">
+
   <!-- www.phpied.com/conditional-comments-block-downloads/ -->
   <!--[if IE]><![endif]-->
 
-  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
+  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
+  <title></title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
   <!--  Mobile Viewport Fix
-        j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag
+        j.mp/mobileviewport & davidbcalhoun.com/2010/viewport-metatag 
   device-width : Occupy full width of the screen in its current orientation
   initial-scale = 1.0 retains dimensions instead of zooming out if page height > device height
   maximum-scale = 1.0 retains dimensions instead of zooming in if page width < device width
@@ -35,7 +34,7 @@
   <!-- For the less-enabled mobile browsers like Opera Mini -->
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=1">
 
-
+ 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
   <script src="js/modernizr-1.5.min.js"></script>
 
@@ -51,15 +50,15 @@
 
   <div id="container">
     <header>
-      <?php include('_header.php'); ?>
+
     </header>
-
+    
     <div id="main">
-        <?php echo $sf_content ?>
-    </div>
 
+    </div>
+    
     <footer>
-      <?php include('_footer.php'); ?>
+
     </footer>
   </div> <!--! end of #container -->
 
@@ -83,5 +82,20 @@
   <script src="js/profiling/yahoo-profiling.min.js?v=1"></script>
   <script src="js/profiling/config.js?v=1"></script>
   <!-- end profiling code -->
+
+
+  <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet 
+       change the UA-XXXXX-X to be your site's ID -->
+  <script>
+   var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
+   (function(d, t) {
+    var g = d.createElement(t),
+        s = d.getElementsByTagName(t)[0];
+    g.async = true;
+    g.src = '//www.google-analytics.com/ga.js';
+    s.parentNode.insertBefore(g, s);
+   })(document, 'script');
+  </script>
+  
 </body>
 </html>
